[package]
name = "ark-groth16"
version = "0.5.0"
authors = [ "arkworks contributors" ]
description = "An implementation of the Groth 2016 zkSNARK proof system"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/groth16"
documentation = "https://docs.rs/ark-groth16/"
keywords = [
    "zero-knowledge",
    "cryptography",
    "zkSNARK",
    "SNARK",
    "Groth-Maller",
]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

################################# Dependencies ################################

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = [ "derive" ] }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false }
ark-std = { version = "0.5.0", default-features = false }

ark-relations = { git = "https://github.com/arkworks-rs/snark.git", default-features = false }
ark-snark = { git = "https://github.com/arkworks-rs/snark.git", default-features = false }

ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std.git", default-features = false, optional = true }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives.git", default-features = false, features = [ "snark", "sponge" ] }
tracing = { version = "0.1", default-features = false, features = ["attributes" ], optional = true }
educe = { version = "0.6.0", default-features = false, features = [ "Clone" ], optional = true }

rayon = { version = "1", optional = true }

[dev-dependencies]
ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = [ "curve" ] }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = [ "curve" ] }
ark-bw6-761 = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false }
ark-mnt4-298 = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = [ "curve", "r1cs" ] }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std.git", default-features = true }


[features]
default = ["parallel"]
std = [
    "ark-ff/std",
    "ark-ec/std",
    "ark-poly/std",
    "ark-relations/std",
    "ark-crypto-primitives/std",
    "ark-std/std",
]
parallel = [
    "std",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-ec/parallel",
    "ark-crypto-primitives/parallel",
    "ark-std/parallel",
    "rayon",
]
r1cs = [
    "ark-crypto-primitives/constraints",
    "ark-r1cs-std",
    "tracing",
    "educe",
]
print-trace = ["ark-std/print-trace"]

[[bench]]
name = "groth16-benches"
path = "benches/bench.rs"
harness = false
required-features = ["std"]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
incremental = true
debug-assertions = true
debug = true

[patch.crates-io]
ark-relations = { git = "https://github.com/arkworks-rs/snark.git" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-bw6-761 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-mnt4-298 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std.git" }
